[package]
authors = ["ChiHai <ihciah@gmail.com>"]
description = "Define a const array without specify length."
edition = "2021"
keywords = ["const", "array", "auto"]
license = "MIT/Apache-2.0"
name = "auto-const-array"
readme = "README.md"
repository = "https://github.com/ihciah/auto-const-array"
version = "0.1.1"
